// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs component Default page: matches snapshot 1`] = `
<nav
  className="section"
>
  <div
    className="container"
  >
    <a
      className="link"
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      Old Norwegian Dictionary
    </a>
    <script
      dangerouslySetInnerHTML={
        {
          "__html": "{"@context":"https://schema.org/","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Old Norwegian Dictionary","item":"undefined/"}]}",
        }
      }
      type="application/ld+json"
    />
  </div>
</nav>
`;

exports[`Breadcrumbs component Letter page: matches snapshot 1`] = `
<nav
  className="section"
>
  <div
    className="container"
  >
    <a
      className="link"
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      Old Norwegian Dictionary
    </a>
    <a
      className="link"
      href="/letter/u2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      Letter Ú
    </a>
    <script
      dangerouslySetInnerHTML={
        {
          "__html": "{"@context":"https://schema.org/","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Old Norwegian Dictionary","item":"undefined/"},{"@type":"ListItem","position":2,"name":"Letter Ú","item":"undefined/letter/u2"}]}",
        }
      }
      type="application/ld+json"
    />
  </div>
</nav>
`;

exports[`Breadcrumbs component Word page: matches snapshot 1`] = `
<nav
  className="section"
>
  <div
    className="container"
  >
    <a
      className="link"
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      Old Norwegian Dictionary
    </a>
    <a
      className="link"
      href="/letter/u2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      Letter Ú
    </a>
    <a
      className="link"
      href="/word/ufrjals"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      Úfrjáls
    </a>
    <script
      dangerouslySetInnerHTML={
        {
          "__html": "{"@context":"https://schema.org/","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Old Norwegian Dictionary","item":"undefined/"},{"@type":"ListItem","position":2,"name":"Letter Ú","item":"undefined/letter/u2"},{"@type":"ListItem","position":3,"name":"Úfrjáls","item":"undefined/word/ufrjals"}]}",
        }
      }
      type="application/ld+json"
    />
  </div>
</nav>
`;
